--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ span {
     }
     100%{
         transform: rotate(360deg) translate(0, 0) ;
-        width:280px;
+        width:36.6vh;
         height:50vh;
         font-size: 30px;
     }
@@ -256,7 +256,7 @@ span {
     }
     100%{
         transform: rotate(360deg) translate(0, 0) ;
-        width:280px;
+        width:36.6vh;
         height:50vh;
         font-size: 30px;
     }
@@ -283,7 +283,7 @@ span {
     }
     100%{
         transform: rotate(360deg) translate(0, 0) ;
-        width:280px;
+        width:36.6vh;
         height:50vh;
         font-size: 30px;
     }
@@ -310,7 +310,7 @@ span {
     }
     100%{
         transform: rotate(360deg) translate(0, 0) ;
-        width:280px;
+        width:36.6vh;
         height:50vh;
         font-size: 30px;
     }
@@ -337,7 +337,7 @@ span {
     }
     100%{
         transform: rotate(360deg) translate(0, 0) ;
-        width:280px;
+        width:36.6vh;
         height:50vh;
         font-size: 30px;
     }
@@ -364,7 +364,7 @@ span {
     }
     100%{
         transform: rotate(360deg) translate(0, 0) ;
-        width:280px;
+        width:36.6vh;
         height:50vh;
         font-size: 30px;
     }
